--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1150,6 +1150,46 @@ author = "Leslie Borjas De Xena"
   year={2015}
 }
 
+
+@article{vanDeursen:2000,
+ author = {van Deursen, Arie and Klint, Paul and Visser, Joost},
+ title = {Domain-specific languages: an annotated bibliography},
+ journal = {ACM SIGPLAN Notices},
+ issue_date = {June 2000},
+ volume = {35},
+ number = {6},
+ month = jun,
+ year = {2000},
+ issn = {0362-1340},
+ pages = {26--36},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/352029.352035},
+ doi = {10.1145/352029.352035},
+ acmid = {352035},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{Balderas:2013,
+        author={Balderas,A. and Ruiz-Rube,I. and Dodero,J. M. and Palomo-Duarte,M. and Berns,A.},
+        year={2013},
+        pages={591--592},
+        title={A generative computer language to customize online learning assessments},
+        publisher={Springer Berlin Heidelberg},
+        journal={Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+        volume={8095 LNCS}
+}
+
+@article{Balderas:2015,
+        author={Balderas,A. and Dodero,J. M. and Palomo-Duarte,M. and Ruiz-Rube,I. },
+        year={2015},
+        pages={851--862},
+        title={A Domain Specific Language for Online Learning Competence Assessments},
+         journal={International Journal of Engineering Education - Special issue on Innovative Methods of Teaching Engineering},
+        volume={31},
+	   number={3}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
